scribble-assertions/src/test/resources/bad/extensions/assertions/UnsatAssertion.scr
module bad.extensions.assertions.UnsatAssertion;


type <java> "java.lang.Int" from "rt.jar" as Int;
type <java> "java.lang.Long" from "rt.jar" as Long;

global protocol Prot(role C, role S)
{
	//[x<10]
	ADD(x:Int) from C to S;  @(x < 10);
	
	//[y>10 && x=y]
	ADD(y:Int) from C to S;  @((y > 10) && (x = y));
}